# ss-install-scripts

./: .gitignore  README.md  install.ps1  install.sh  install_agents.py  install_win.ps1  install_zeek.sh  main.py  pyproject.toml  requirements.in  requirements.txt  run.sh
agent_core/: __init__.py  certificate_manager.py  configure_logging.py  constants.py  fluent_bit_configurator.py  fluent_bit_installer.py  github_releases.py  network_analyzer_installer.py  npcap_installer.py  osquery.py  platform_context.py  secrets_manager.py  ss_agent_configurator.py  ss_agent_installer.py  system_utils.py  zeek_installer.py
agent_core/os_strategy/: linux_strategy.py  macos_strategy.py  platform_strategy.py  windows_strategy.py
config/: fluent-bit-parser-template.conf  fluent-bit-template.conf  ss-agent-template.json
utils/: files.py  uninstall_utils.py
