[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ss-install-scripts"
version = "1.0.0"
description = "Cross-platform installer for SecuritySpectrum agent tools"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "toml>=0.10",
    "distro>=1.8",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]

[tool.setuptools.packages.find]
include = ["agent_core*"]
